--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,30 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .task {
   display: flex;
   justify-content: space-between;
   width: 300px;
+  background-color: rgb(183, 183, 249);
+  padding: 5px;
+  font-size: 11px;
+}
+
+.task svg {
+  font-size: 16px;
+}
+
+.task h3{
+  margin: 0;
+  padding: 0;
+}
+
+.list-tasks {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
 }
