--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,37 @@
   flex-direction: column;
   gap: 2px;
 }
+
+.ajout {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  padding: 10px;
+
+}
+
+.ajout legend{
+  text-align: center;
+  background-color: rgb(8, 132, 90);
+}
+
+.ajout button {
+  background-color: rgb(7, 7, 77);
+  color: white;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.ajout button:hover {
+  opacity: 0.7;
+}
+
+.ajout input{ 
+  padding: 5px;
+}
+
+.content {
+  display: flex;
+  gap: 20px;
+  font-size: 11px;
+}
