--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   font-size: 16px;
 }
 
-.task h3{
+.task h3 {
   margin: 0;
   padding: 0;
 }
@@ -31,14 +31,15 @@
 
 .ajout {
   display: flex;
-  gap: 10px;
+  gap: 5px;
   flex-direction: column;
   padding: 10px;
 
 }
 
-.ajout legend{
+fieldset legend {
   text-align: center;
+  padding: 2px 20px;
   background-color: rgb(8, 132, 90);
 }
 
@@ -46,14 +47,15 @@
   background-color: rgb(7, 7, 77);
   color: white;
   display: flex;
-  justify-content: center;
-  gap: 30px;
+  gap: 20px;
+  padding-left: 30px;
 }
+
 .ajout button:hover {
   opacity: 0.7;
 }
 
-.ajout input{ 
+.ajout input {
   padding: 5px;
 }
 
@@ -62,15 +64,61 @@
   gap: 20px;
   font-size: 11px;
 }
+
 .info {
   background-color: brown;
   color: white;
-  padding: 10px;
+  padding: 5px;
   margin-bottom: 5px;
   display: flex;
   gap: 20px;
 }
+
 .info svg {
   font-size: 40px;
   color: antiquewhite;
+}
+
+.supression {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.supression button {
+  background-color: rgb(7, 7, 77);
+  color: white;
+  display: flex;
+  gap: 20px;
+  padding-left: 30px;
+}
+
+.supression button:hover {
+  opacity: 0.7;
+}
+
+.actions {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.modification {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.modification button {
+  background-color: rgb(7, 7, 77);
+  color: white;
+  display: flex;
+  gap: 20px;
+  padding-left: 30px;
+}
+
+.modification button:hover {
+  opacity: 0.7;
 }
