--- a/src/App.css
+++ b/src/App.css
@@ -122,3 +122,17 @@ fieldset legend {
 .modification button:hover {
   opacity: 0.7;
 }
+
+.actionstask {
+  display: flex;
+  gap: 2px;
+}
+
+.actionstask button {
+  background-color: rgb(62, 20, 100);
+  color: whitesmoke;
+  border: none;
+}
+.actionstask button svg {
+  font-size: 17px;
+}
