--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@ fieldset legend {
   text-align: center;
   padding: 2px 20px;
   background-color: rgb(8, 132, 90);
+  color: white;
 }
 
 .ajout button {
@@ -63,6 +64,9 @@ fieldset legend {
   display: flex;
   gap: 20px;
   font-size: 11px;
+  border: 1px solid #000;
+  padding: 30px;
+  border-radius: 10px;
 }
 
 .info {
